Upgrading : 

-- All versions of mirmon use the same state file format, config file format
   and icon set. You can upgrade safely by just replacing program 'mirmon'.

-- It is advisable to update the countries.list :
   http://www.staff.science.uu.nl/~penni101/mirmon/svn/trunk/countries.list

----------------------------------------------------------------------
mirmon 2.11 -- 22 juli 2016

o Brent Thompson spotted a bug in the computation for 'median' ; fixed.

----------------------------------------------------------------------
mirmon 2.10 -- 15 augustus 2014

o Probe only one site-url with "mirmon -get url site-url".

----------------------------------------------------------------------
mirmon 2.9 -- 13 augustus 2013

o Added a LICENSE file, requested by fedora packagers.

----------------------------------------------------------------------
mirmon 2.8 -- 13 februari 2013

o Fixed the cronjob examples in the doc ; because in crontab(5) entries
  a '%' has to be escaped as "\%".

o Fixed the doc ; html pages are now "XHTML 1.0 Strict" compliant.

----------------------------------------------------------------------
mirmon 2.7 -- Sat Dec 15 09:56:53 CET 2012

o Added option "always_get region ..." for Master, Tier1 etc.

o Changed location of author, svn repository.

--- mirmon 2.6 -- 26 may 2012 ----------------------------------------

o Fixed sorting of 'fake' domain ; ucfirst not is required.

--- mirmon 2.5 -- 24 march 2012 --------------------------------------

o Capitalize region names ; fake domains (like 'Master') should be ucfirst,
  and go to the top of the report list ; 'proper' regions are sorted 'lc'.
  The ISO-country-list is now utf8, Capitalized and complete.

o Faster probe-load averaging by always probing the average number
  of mirrors. The 'ok' and 'not ok' mirrors are averaged separately.

o Show 'project_name' when reporting changes in the mirror-list.

o Show 'path' for rsync urls in the report like 'site::path'.
